delivery status and 'from' field no longer overlap if the from field is very long

--- a/app/assets/stylesheets/responsive/_request_layout.scss
+++ b/app/assets/stylesheets/responsive/_request_layout.scss
@@ -61,11 +61,18 @@
   padding: 0.6em 1.2em;
 }
 
+.correspondence__header__from {
+  @include respond-min( $main_menu-mobile_menu_cutoff ){
+    margin-right: 8em;
+  }
+}
+
 .correspondence__header__delivery-status {
   @include respond-min( $main_menu-mobile_menu_cutoff ){
     position: absolute;
     right: 1.2em;
     top: 0.6em;
+    max-width: 8em;
   }
 }
 
